test_suite/ill_formed/unknown_name.mnl
fun main: [] => {
    def a = 1
    a = b

    return 0
}
